--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,6 +44,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1.1</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
 
